src/test/ui/resolve/issue-3907-2.stderr
error[E0038]: the trait `issue_3907::Foo` cannot be made into an object
  --> $DIR/issue-3907-2.rs:14:12
   |
LL | type Foo = issue_3907::Foo+'static;
   |            ^^^^^^^^^^^^^^^^^^^^^^^ the trait `issue_3907::Foo` cannot be made into an object
   |
   = note: method `bar` has no receiver

error[E0038]: the trait `issue_3907::Foo` cannot be made into an object
  --> $DIR/issue-3907-2.rs:21:1
   |
LL | fn bar(_x: Foo) {}
   | ^^^^^^^^^^^^^^^ the trait `issue_3907::Foo` cannot be made into an object
   |
   = note: method `bar` has no receiver

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0038`.
